[package]
name = "cpdep"
version = "0.1.0"
authors = ["Fabian Beckmann <fb@phaseq.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
crossterm = "0.17"
tui = { version = "0.9", default-features = false, features = ['crossterm'] }
failure = "0.1"

[dependencies.structopt]
version = "0.3"
default-features = false

[dependencies.ignore]
version = "0.4"
default-features = false

[dependencies.regex]
version = "1.3"
default-features = false
features = ["std", "perf"]