[package]
name = "cpdep"
version = "0.1.0"
authors = ["Fabian Beckmann <fb@phaseq.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
crossterm = "0.17.7"
tui = { version = "0.10.0", default-features = false, features = ['crossterm'] }
failure = "0.1.8"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
rayon = "1.4.0"

[dependencies.structopt]
version = "0.3.17"
default-features = false

[dependencies.ignore]
version = "0.4.16"
default-features = false

[dependencies.regex]
version = "1.3.9"
default-features = false
features = ["std", "perf"]
